# postgres-ddl-generator

./: .env.sample  .gitignore  README.md  pyproject.toml
source/: main.py
source/config/: logger.py  postgres.py
source/services/: models.py  queries.py  worker.py
