[project]
name = "postgres-tables-ddl-generator"
version = "0.1.0"
description = "CLI tool to generate PostgreSQL's table creation query."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
